More updates for vim-ai

--- a/vim-ai-roles.ini
+++ b/vim-ai-roles.ini
@@ -1,3 +1,11 @@
+[default]
+options.endpoint_url = https://openrouter.ai/api/v1/chat/completions
+options.model = anthropic/claude-sonnet-4.5
+options.stream = 1
+options.temperature = 0.1
+max_completion_tokens = 5000
+initial_prompt = ""
+
 [go]
 prompt = You are an expert Go language programmer who allows follows best practice and formatting.
   Do not surround code with markdown code blocks or include any unnecessary explanations or comments.
@@ -17,8 +25,11 @@ prompt = You are an expert JavaScript programmer who writes code for the browser
 options.temperature = 0.3
 
 [free]
+prompt = You are a programmer. Do not surround code with markdown code blocks or include any unnecessary explanations or comments.
+options.temperature = 0.3
 options.model = meta-llama/llama-3.3-70b-instruct:free
 
 [grammar]
 prompt = Fix spelling and grammar. Try to maintain the original voice and tone. Do not include any explanation.
 options.temperature = 0.1
+options.model = meta-llama/llama-3.3-70b-instruct:free
