--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ set -g status-justify centre # center align window list
 set -g status-left-length 32
 set -g status-right-length 120
 #set -g status-left '#[fg=white]#H - #(uname -r | cut -c 1-8)#[default]'
-set -g status-left '#[fg=white]▹ #H/#S'
+set -g status-left '#[fg=white]▹ #W:#S@#H'
 set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
